src/components/Modal/Modal.module.scss
@import '../../styles/shared';

.container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: calc(100vh - #{$bar-height});
  background-color: rgba(0, 0, 0, 0.73);
  z-index: 1000;

  @include media-breakpoint-up(md) {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
  }
}

.modal {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  box-shadow: 15px 15px 15px 0 #0000007b;
  background-color: $modal-main-blue;

  @include media-breakpoint-up(md) {
    border-radius: 8px;
    height: auto;
    max-height: 80vh;
    width: 700px;
  }

  @include media-breakpoint-up(lg) {
    width: 782px;
  }

  &__header {
    background-color: $blue;
    height: $modal-header-height;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-weight: 600;
    color: #fff;
    font-size: 1rem;
    padding: 0 0 0 1rem;
    text-transform: uppercase;

    @include media-breakpoint-up(md) {
      font-size: 1.2rem;
      height: 70px;
      padding: 0 0 0 1.5rem;
      border-top-left-radius: 8px;
      border-top-right-radius: 8px;
    }

    &__headline {
      display: flex;
      align-items: center;
    }

    &__close {
      cursor: pointer;
      padding: 1rem;

      @include media-breakpoint-up(md) {
        padding: 1.5rem;
      }
    }
  }

  &__main {
    flex-grow: 1;
    padding: 1rem;
    overflow-y: auto;
    overflow-x: hidden;
    height: 100%;
    max-height: 100%;

    @include media-breakpoint-up(md) {
      padding: 1.5rem;
      max-height: 60vh;
    }
  }

  &__footer {
    background-color: $blue;
    height: $modal-header-height;
    flex-shrink: 0;

    @include media-breakpoint-up(md) {
      height: 70px;
      border-bottom-left-radius: 8px;
      border-bottom-right-radius: 8px;
    }
  }
}

.icon {
  fill: #fff;
  display: block;

  &__close {
    width: 20px;

    @include media-breakpoint-up(md) {
      width: 23px;
    }
  }
}

.fade {
  &--enter {
    opacity: 0;
    transition: opacity 200ms ease-in-out;
  }

  &--enter-active {
    opacity: 1;
  }

  &--exit {
    opacity: 1;
    transition: opacity 200ms ease-in-out;
  }

  &--exit-active {
    opacity: 0;
  }
}

.scale {
  &--enter {
    transform: scale(0.6);
    transition: transform 200ms ease-in-out;
  }

  &--enter-active {
    transform: scale(1);
  }

  &--exit {
    transform: scale(1);
    transition: transform 200ms ease-in-out;
  }

  &--exit-active {
    transform: scale(0);
  }
}

